src/main/resources/deployment/kubernetes/server/deployment.tpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector: {}
  replicas: 1
  template:
    metadata:
      name: server
    spec:
      containers:
        - name: server
          image: $DOCKER_IMAGE
          ports:
            - containerPort: 8080
              name: web
            - containerPort: 8081
              name: health
          livenessProbe:
            httpGet:
              port: health
              path: /health
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: health
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 50m


  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
