src/main/resources/deployment/kubernetes/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-env-iot-server
spec:
  selector: {}
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: web
