src/main/resources/deployment/kubernetes/server/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-env-iot-server-ipv4
  annotations:
    kubernetes.io/ingress.global-static-ip-name: home-env-iot-ipv4
    networking.gke.io/managed-certificates: home-env-iot-api
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: api.d4ve.me
      http:
        paths:
          - backend:
              serviceName: home-env-iot-server
              servicePort: web
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-env-iot-server-ipv6
  annotations:
    kubernetes.io/ingress.global-static-ip-name: home-env-iot-ipv6
    networking.gke.io/managed-certificates: home-env-iot-api
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: api.d4ve.me
      http:
        paths:
          - backend:
              serviceName: home-env-iot-server
              servicePort: web
